<resources>
    <string name="app_name">UsersGSE</string>
    <string name="description_user_photo">Imagen del usuario</string>
    <string name="text_name">Name</string>
    <string name="text_user_name">User Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone</string>
    <string name="text_website">Website</string>
    <string name="action_settings">Settings</string>
    <string name="title_list">Users</string>
    <string name="text_title_toolbar">Users</string>
</resources>