<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/pading_min">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="@dimen/size_tv_id"
            android:layout_height="@dimen/size_tv_id"
            android:background="@drawable/round_score"
            android:gravity="center"
            android:padding="@dimen/pading_min"
            android:textColor="@color/color_text_id"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            tools:text="1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="@dimen/size_tv"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:text="@string/text_name"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintBottom_toTopOf="@id/tvNameResponse"
                app:layout_constraintEnd_toStartOf="@id/tvEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNameResponse"
                android:layout_width="@dimen/size_tv"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:ellipsize="end"
                android:hint="@string/text_name"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toTopOf="@+id/tvUserName"
                app:layout_constraintEnd_toStartOf="@id/tvEmailResponse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="@dimen/size_tv"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:text="@string/text_user_name"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintBottom_toTopOf="@id/tvUserNameResponse"
                app:layout_constraintEnd_toStartOf="@id/tvPhone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameResponse" />

            <TextView
                android:id="@+id/tvUserNameResponse"
                android:layout_width="@dimen/size_tv"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:ellipsize="end"
                android:hint="@string/text_user_name"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toTopOf="@id/tvWebsite"
                app:layout_constraintEnd_toStartOf="@id/tvPhoneResponse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="@dimen/size_tv"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:text="@string/text_email"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintBottom_toTopOf="@id/tvEmailResponse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEmailResponse"
                android:layout_width="@dimen/size_tv"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:ellipsize="end"
                android:hint="@string/text_email"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toTopOf="@+id/tvPhone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvNameResponse"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="@dimen/size_tv"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:text="@string/text_phone"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintBottom_toTopOf="@id/tvPhoneResponse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvUserName"
                app:layout_constraintTop_toBottomOf="@id/tvEmailResponse" />

            <TextView
                android:id="@+id/tvPhoneResponse"
                android:layout_width="@dimen/size_tv"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:ellipsize="end"
                android:hint="@string/text_phone"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toTopOf="@id/tvWebsite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvUserNameResponse"
                app:layout_constraintTop_toBottomOf="@id/tvPhone" />

            <TextView
                android:id="@+id/tvWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:text="@string/text_website"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvwebsiteResponse"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUserNameResponse" />

            <TextView
                android:id="@+id/tvwebsiteResponse"
                android:layout_width="@dimen/size_tv_email"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pading_min_tv"
                android:ellipsize="end"
                android:hint="@string/text_website"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneResponse" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>